# Polars.jl

./: LICENSE  Project.toml  README.md
.github/workflows/: ExportPluto.yaml  Tests.yml
airport/: Project.toml  airport.jl
c-polars/: Cargo.toml  build.rs
c-polars/include/: arrow.h  polars.h
c-polars/src/: expr.rs  lib.rs  series.rs  value.rs
docs/: docs.html  docs.jl  index.html  pluto_export.json
pluto_state_cache/: 0_19_29ZLKDd9XeT3TqgVkd1NMCb1FrMmk7ydOgMGVKQI3S2Bo.plutostate  0_20_15ZLKDd9XeT3TqgVkd1NMCb1FrMmk7ydOgMGVKQI3S2Bo.plutostate
scripts/: gen_header.jl
src/: API.jl  Polars.jl  arrow.jl  expr.jl  series.jl  value.jl
test/: runtests.jl
