[package]
name = "c-polars"
version = "0.1.0"
edition = "2021"

[lib]
name = "polars"
crate-type = ["cdylib"]

[build-dependencies]
cbindgen = "0.25.0"

[dependencies.polars]
git = "https://github.com/pola-rs/polars"
rev = "c6a301e3141d40c6c6febdebe0b95632ac8da2ed" # https://github.com/pola-rs/polars/pull/10568
features = ["parquet", "lazy", "performant"]
