[package]
name = "c-polars"
version = "0.1.0"
edition = "2021"

[lib]
name = "polars"
crate-type = ["cdylib"]

[build-dependencies]
cbindgen = "0.25.0"

[dependencies.polars-core]
version = "0.34.2"

[dependencies.polars]
version = "0.34.2"
features = ["parquet", "abs", "round_series", "lazy_regex", "lazy", "performant", "is_in",
            "dtype-categorical", "strings", "trigonometry"]
